feat: 优化字体加载策略，调整页面内边距

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="/favicon.ico">
   <title>I便笺</title>
+  
+  <!-- 预加载字体文件以提升加载性能 -->
+  <link rel="preload" href="/font/iconfont.woff2?t=1673061525635" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/font/iconfont.woff?t=1673061525635" as="font" type="font/woff" crossorigin>
+  
   <link rel="stylesheet" href="/font/iconfont.css">
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/common.css">
